--- a/conf/application.conf
+++ b/conf/application.conf
@@ -337,15 +337,16 @@ play.db {
 # EBean: https://playframework.com/documentation/latest/JavaEbean
 # Anorm: https://www.playframework.com/documentation/latest/ScalaAnorm
 #
+ebean.default = ["models.*"] #kuann
 db {
   # You can declare as many datasources as you want.
   # By convention, the default datasource is named `default`
 
   # https://www.playframework.com/documentation/latest/Developing-with-the-H2-Database
-  default.driver = org.postgresql.Driver
-  default.url = "jdbc:postgresql://localhost/stdb"
-  default.username = play
-  default.password = "play"
+  default.driver = org.postgresql.Driver #kuann
+  default.url = "jdbc:postgresql://localhost/stdb" #kuann
+  default.username = play #kuann
+  default.password = "play" #kuann
 
   # You can turn on SQL logging for any datasource
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
