--- a/conf/application.conf
+++ b/conf/application.conf
@@ -344,7 +344,7 @@ db {
 
   # https://www.playframework.com/documentation/latest/Developing-with-the-H2-Database
   default.driver = org.postgresql.Driver 
-  default.url = "jdbc:postgresql://localhost/stdb" 
+  #default.url = "jdbc:postgresql://localhost/stdb" 
   #default.username = play
   #default.password = "play" 
 
